# aws-oxide-api

./: Cargo.toml  README.md
core/codegen/: Cargo.toml
core/codegen-test/: Cargo.toml
core/codegen-test/src/: lib.rs
core/codegen/src/: lib.rs
core/lib/: Cargo.toml
core/lib/examples/: hello_world.rs  lambda_example.rs  testing_example.rs
core/lib/src/: application.rs  error.rs  lib.rs  nonmain.rs  outcome.rs  path.rs  request.rs  response.rs  state.rs  testing.rs
core/lib/src/guards/: body.rs  json.rs  mod.rs
core/lib/src/parameters/: json.rs  mod.rs
core/route/: Cargo.toml
core/route/src/: error.rs  incoming.rs  lib.rs  route_uri.rs
