[package]
name = "aws-oxide-api-codegen-test"
version = "0.1.0-alpha.1"
authors = ["jspaulsen <jpaulsen@lo3energy.com>"]
edition = "2018"

[dependencies]
aws-oxide-api = { path = "../lib/" }
serde = "1.0.118"
tokio = {"version" = "0.2" } # {"version" = "0.3.6", features=["macros", "rt-multi-thread"]}

[dev-dependencies]
serde_json = "1.0.57"
tokio = {"version" = "0.2" } # {"version" = "0.3.6", features=["macros", "rt-multi-thread"]}
