[package]
name = "aws-oxide-api"
version = "0.1.0"
authors = ["jspaulsen <jpaulsen@lo3energy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-oxide-api-codegen = { path = "../codegen/" }
aws-oxide-api-route = { path = "../route/" }
futures = "0.3.5"
tokio = {"version" = "0.3.6", features=["macros", "rt-multi-thread"]}
serde = "1.0.118"
serde_json = "1.0.57"
netlify_lambda_http = "0.1.2"

[dev-dependencies]
tokio = {"version" = "0.3.6", features=["macros", "rt-multi-thread"]}
